add navigation, image description

--- a/index.html
+++ b/index.html
@@ -23,23 +23,17 @@
     <nav>
       <ul id="menu">
         <li>
-          <a href="index.html">modul-r</a>
+          <a href="index.html">show me</a>
         </li>
         <li>
-          <a href="about.html">about</a>
+          <a href="tell-me.html">tell me</a>
         </li>
       </ul>
     </nav>
     <div class="container">
       <div class="item-modul-r-1">
-        <p>MODUL-R</p>
-        <p>seminar Vodopivec, 2018</p>
-        <p>Tovarna Rog je več kot objekt sam, ključni za njegovo analizo in iskanje alternative so uporabniki, ki jo
-          tvorijo.
-          Iz tega izhodišča sem se odločila, da poiščem rešitev za najbolj kritično obdobje reinterpretacije objekta Rog
-          - čas obnove. S tem, da lahko delujoče skupine ostanejo na tej lokaciji ter omogočanjem, da se dejavnosti Roga
-          odvijajo naprej, se ohrani skupna identiteta v času, ki bi drugače pomenil konec za to alternativno skupnost.
-        </p>
+        <p>Habibitat</p>
+        <p>What should brothel architecture be like?</p>
       </div>
       <div class="item-modul-r-2">
         <a class="fancybox" href="img/modul-r/modul-r-1-full.jpeg">
