add content photo descriptions, markup cleanup

--- a/index.html
+++ b/index.html
@@ -31,17 +31,36 @@
       </ul>
     </nav>
     <div class="container">
-      <div class="item-modul-r-1">
+      <div class="item">
         <p>Habibitat</p>
         <p>What should brothel architecture be like?</p>
       </div>
-      <div class="item-modul-r-2">
-        <a class="fancybox" href="img/modul-r/modul-r-1-full.jpeg">
-          <img src="img/modul-r/modul-r-1.jpeg" alt="grafika">
-        </a>
+      <div class="item">
+        <p>2 photographs?</p>
       </div>
-      <div class="item-modul-r-3">
-        </a>
+      <div class="item">
+        <p>How deep is your type</p>
+      </div>
+      <div class="item">
+        <p>Shade on you</p>
+      </div>
+      <div class="item">
+        <p>Custom type</p>
+      </div>
+      <div class="item">
+        <p>2 more photographs</p>
+      </div>
+      <div class="item">
+        <p>Slumberland <br />MENT festival</p>
+        <p>band poster as a musical medium?</p>
+      </div>
+      <div class="item">
+        <p>Modul-r</p>
+        <p>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana.?</p>
+      </div>
+      <div class="item">
+        <p>It’s all a blur</p>
+        <p>party poster</p>
       </div>
       <footer>
         <p>© 2019 Lana Arih - All Rights Reserved</p>
