add galery images

--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
       </ul>
     </nav>
     <div class="container">
-      <div class="item">
-        <p>Habibitat</p>
-        <p>What should brothel architecture be like?</p>
+      <div class="row">
+        <div class="item">
+          <div class="column">
+            <div class="left-column">
+              <img src="img/1-1000px-habibitat.jpg" alt="habitat">
+            </div>
+          </div>
+          <div class="column">
+            <div class="right-column">
+              <p>Habibitat</p>
+              <p>What should brothel architecture be like?</p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="item">
         <p>2 photographs?</p>
