add images, clean up

--- a/index.html
+++ b/index.html
@@ -13,70 +13,87 @@
 
 <body>
   <header>
+    <div class="wrapper">
+      <div class="logo">
+        <a href="http://www.lanarih.com/index.html">
+          <img src="img/lanaarih-logo-200.gif" width="100px" alt="logo">
+        </a>
+      </div>
+      <nav>
+        <ul id="menu">
+          <li>
+            <a href="index.html">show me</a>
+          </li>
+          <li>
+            <a href="tell-me.html">tell me</a>
+          </li>
+        </ul>
+      </nav>
   </header>
-  <div class="wrapper">
-    <div class="logo">
-      <a href="http://www.lanarih.com/index.html">
-        <img src="img/lanaarih-logo-200.gif" width="100px" alt="logo">
-      </a>
+  <div class="container">
+    <div class="box 1">
+      <img src="img/1-1000px-habibitat.jpg" alt="habitat">
     </div>
-    <nav>
-      <ul id="menu">
-        <li>
-          <a href="index.html">show me</a>
-        </li>
-        <li>
-          <a href="tell-me.html">tell me</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="container">
-      <div class="row">
-        <div class="item">
-          <div class="column">
-            <div class="left-column">
-              <img src="img/1-1000px-habibitat.jpg" alt="habitat">
-            </div>
-          </div>
-          <div class="column">
-            <div class="right-column">
-              <p>Habibitat</p>
-              <p>What should brothel architecture be like?</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <p>2 photographs?</p>
-      </div>
-      <div class="item">
-        <p>How deep is your type</p>
-      </div>
-      <div class="item">
-        <p>Shade on you</p>
-      </div>
-      <div class="item">
-        <p>Custom type</p>
-      </div>
-      <div class="item">
-        <p>2 more photographs</p>
-      </div>
-      <div class="item">
-        <p>Slumberland <br />MENT festival</p>
-        <p>band poster as a musical medium?</p>
-      </div>
-      <div class="item">
-        <p>Modul-r</p>
-        <p>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana.?</p>
-      </div>
-      <div class="item">
-        <p>It’s all a blur</p>
-        <p>party poster</p>
-      </div>
-      <footer>
-        <p>© 2019 Lana Arih - All Rights Reserved</p>
-      </footer>
+    <div class="box 2">
+      <p>Habibitat</p>
+      <p>What should brothel architecture be like?</p>
     </div>
+
+    <div class="box 1">
+      <img src="img/2-1000px-dvefotografiji.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>2 photographs?</p>
+    </div>
+    <div class="box 1">
+      <img src="img/3-1000px-howdeepisyourtype.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>How deep is your type</p>
+    </div>
+    <div class="box 1">
+      <img src="img/4-1000px-IMG_1384.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>Shade on you</p>
+    </div>
+    <div class="box 1">
+      <img src="img/5-1000px-gledalisca-naslov.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>Custom type</p>
+    </div>
+    <div class="box 1">
+      <img src="img/6-1000px-dvefotografiji.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>2 more photographs</p>
+    </div>
+    <div class="box 1">
+      <img src="img/7-1000px-appointMENT.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>Slumberland <br />MENT festival</p>
+      <p>band poster as a musical medium?</p>
+    </div>
+    <div class="box 1">
+      <img src="img/8-1000px-modul-r-plakat.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>Modul-r</p>
+      <p>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana.?</p>
+    </div>
+    <div class="box 1">
+      <img src="img/9-1000px-tide-pods.jpg" alt="habitat">
+    </div>
+    <div class="box 2">
+      <p>It’s all a blur</p>
+      <p>party poster</p>
+    </div>
+    <footer>
+      <p>© 2019 Lana Arih - All Rights Reserved</p>
+    </footer>
+  </div>
 </body>
 
 </html>
