--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" />
+  <!-- <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" /> -->
   <link rel="stylesheet" href="css/remedy.css" />
   <link rel="stylesheet" href="css/style.css" />
   <title>Lana Arih Portfolio</title>
