add grid styles, fix layout issues

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </ul>
       </nav>
   </header>
+  <div class="wrapper">
   <div class="container">
     <div class="box 1">
       <img src="img/1-1000px-habibitat.jpg" alt="habitat">
@@ -38,7 +39,6 @@
       <p>Habibitat</p>
       <p>What should brothel architecture be like?</p>
     </div>
-
     <div class="box 1">
       <img src="img/2-1000px-dvefotografiji.jpg" alt="habitat">
     </div>
@@ -90,10 +90,11 @@
       <p>It’s all a blur</p>
       <p>party poster</p>
     </div>
+  </div>
     <footer>
       <p>© 2019 Lana Arih - All Rights Reserved</p>
     </footer>
-  </div>
+    </div>
 </body>
 
 </html>
