fix navigation overlapaping first element in grid

--- a/index.html
+++ b/index.html
@@ -31,70 +31,70 @@
       </nav>
   </header>
   <div class="wrapper">
-  <div class="container">
-    <div class="box 1">
-      <img src="img/1-1000px-habibitat.jpg" alt="habitat">
+    <div class="container">
+      <div class="box 1 box-top">
+        <img src="img/1-1000px-habibitat.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>Habibitat</p>
+        <p>What should brothel architecture be like?</p>
+      </div>
+      <div class="box 1">
+        <img src="img/2-1000px-dvefotografiji.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>2 photographs?</p>
+      </div>
+      <div class="box 1">
+        <img src="img/3-1000px-howdeepisyourtype.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>How deep is your type</p>
+      </div>
+      <div class="box 1">
+        <img src="img/4-1000px-IMG_1384.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>Shade on you</p>
+      </div>
+      <div class="box 1">
+        <img src="img/5-1000px-gledalisca-naslov.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>Custom type</p>
+      </div>
+      <div class="box 1">
+        <img src="img/6-1000px-dvefotografiji.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>2 more photographs</p>
+      </div>
+      <div class="box 1">
+        <img src="img/7-1000px-appointMENT.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>Slumberland <br />MENT festival</p>
+        <p>band poster as a musical medium?</p>
+      </div>
+      <div class="box 1">
+        <img src="img/8-1000px-modul-r-plakat.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>Modul-r</p>
+        <p>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana.?</p>
+      </div>
+      <div class="box 1">
+        <img src="img/9-1000px-tide-pods.jpg" alt="habitat">
+      </div>
+      <div class="box 2">
+        <p>It’s all a blur</p>
+        <p>party poster</p>
+      </div>
     </div>
-    <div class="box 2">
-      <p>Habibitat</p>
-      <p>What should brothel architecture be like?</p>
-    </div>
-    <div class="box 1">
-      <img src="img/2-1000px-dvefotografiji.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>2 photographs?</p>
-    </div>
-    <div class="box 1">
-      <img src="img/3-1000px-howdeepisyourtype.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>How deep is your type</p>
-    </div>
-    <div class="box 1">
-      <img src="img/4-1000px-IMG_1384.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>Shade on you</p>
-    </div>
-    <div class="box 1">
-      <img src="img/5-1000px-gledalisca-naslov.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>Custom type</p>
-    </div>
-    <div class="box 1">
-      <img src="img/6-1000px-dvefotografiji.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>2 more photographs</p>
-    </div>
-    <div class="box 1">
-      <img src="img/7-1000px-appointMENT.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>Slumberland <br />MENT festival</p>
-      <p>band poster as a musical medium?</p>
-    </div>
-    <div class="box 1">
-      <img src="img/8-1000px-modul-r-plakat.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>Modul-r</p>
-      <p>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana.?</p>
-    </div>
-    <div class="box 1">
-      <img src="img/9-1000px-tide-pods.jpg" alt="habitat">
-    </div>
-    <div class="box 2">
-      <p>It’s all a blur</p>
-      <p>party poster</p>
-    </div>
-  </div>
     <footer>
       <p>© 2019 Lana Arih - All Rights Reserved</p>
     </footer>
-    </div>
+  </div>
 </body>
 
 </html>
