--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img src="img/4-1000px-IMG_1384.jpg" alt="habitat">
       </div>
       <div class="box img-desc">
-        <p>Shade on you</p>
+        <p> Shade On You, 2018 AA nanotourism Visiting School workshop, with Žan Šabeder, Sho Tetsutani and Yiyi Zhu</p>
       </div>
       <div class="box 1">
         <img src="img/5-1000px-gledalisca-naslov.jpg" alt="habitat">
