--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" /> -->
-  <link rel="stylesheet" href="css/remedy.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>Lana Arih Portfolio</title>
 </head>
 
@@ -31,66 +31,66 @@
       </nav>
   </header>
   <div class="wrapper">
-    <div class="container">
-      <div class="box 1 box-top">
-        <img src="img/1-1000px-habibitat.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
-        <p>Habibitat</br>What should brothel architecture be like?</p>
-      </div>
-      <div class="box 1">
-        <img src="img/2-1000px-dvefotografiji.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
-        <p>2 photographs?</p>
-      </div>
-      <div class="box 1">
-        <img src="img/3-1000px-howdeepisyourtype.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
+    <article class="container">
+      <article class="box 1 box-top">
+        <img src="img/1-1000px-habibitat-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
+        <p>Habibitat</br>What should brothel architecture be like</p>
+      </article>
+      <article class="box 1">
+        <img src="img/2-1000px-dvefotografiji-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
+        <p>2 photographs</p>
+      </article>
+      <article class="box 1">
+        <img src="img/3-1000px-howdeepisyourtype-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
         <p>How deep is your type</p>
-      </div>
-      <div class="box 1">
-        <img src="img/4-1000px-IMG_1384.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
+      </article>
+      <article class="box 1">
+        <img src="img/4-1000px-IMG_1384-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
         <p> Shade On You, 2018 AA nanotourism Visiting School workshop, with Žan Šabeder, Sho Tetsutani and Yiyi Zhu</p>
-      </div>
-      <div class="box 1">
-        <img src="img/5-1000px-gledalisca-naslov.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
+      </article>
+      <article class="box 1">
+        <img src="img/5-1000px-gledalisca-naslov-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
         <p>Custom type</p>
-      </div>
-      <div class="box 1">
-        <img src="img/6-1000px-dvefotografiji.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
+      </article>
+      <article class="box 1">
+        <img src="img/6-1000px-dvefotografiji-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
         <p>2 more photographs</p>
-      </div>
-      <div class="box 1">
-        <img src="img/7-1000px-appointMENT.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
-        <p>Slumberland</br>MENT festival</br>band poster as a musical medium?</p>
-      </div>
-      <div class="box 1">
-        <img src="img/8-1000px-modul-r-plakat.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
-        <p>Modul-r</br>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana.?
+      </article>
+      <article class="box 1">
+        <img src="img/7-1000px-appointMENT-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
+        <p>Slumberland</br>MENT festival</br>band poster as a musical medium</p>
+      </article>
+      <article class="box 1">
+        <img src="img/8-1000px-modul-r-plakat-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
+        <p>Modul-r</br>A temporary structure developed for Rog, a squat and socio-cultural institution in Ljubljana
         </p>
-      </div>
-      <div class="box 1">
-        <img src="img/9-1000px-tide-pods.jpg" alt="habitat">
-      </div>
-      <div class="box img-desc">
+      </article>
+      <article class="box 1">
+        <img src="img/9-1000px-tide-pods-opt.jpg" alt="habitat">
+      </article>
+      <article class="box img-desc">
         <p>It’s all a blur</br>party poster</p>
-      </div>
-    </div>
-    <footer>
-      <p>© 2019 Lana Arih - All Rights Reserved</p>
-    </footer>
+      </article>
+  </div>
+  <footer>
+    <p>© 2019 Lana Arih - All Rights Reserved</p>
+  </footer>
   </div>
 </body>
 
